--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ South==1.0.2
 djangotoolbox==1.6.2
 mongoengine==0.9.0
 pymongo==2.8
-django-mongodb-engine==0.5.2
+django-mongodb-engine
 pep8
 Pillow
 bcrypt
