--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 Django==1.5.11
-South==1.0.2
-djangotoolbox==1.6.2
-mongoengine==0.9.0
-pymongo==2.8
+South
+djangotoolbox
+mongoengine
+pymongo
 django-mongodb-engine
 pep8
 Pillow
