--- a/.travis.yml
+++ b/.travis.yml
@@ -11,16 +11,16 @@ python:
 
 install:
   - pip install -r requirements.txt
-  # - pip install coveralls
+  - pip install coveralls
 
 script:
 - flake8 convergence/
 - flake8 blog/
-# - coverage run --source=junction --omit='*tests*,*commands*,*migrations*,*admin*,*wsgi*' -m py.test -v --tb=native
-# - coverage report
+- coverage run --source=junction --omit='*tests*,*commands*,*migrations*,*admin*,*wsgi*' -m py.test -v --tb=native
+- coverage report
 
-# after_success:
-#   coveralls
+after_success:
+  coveralls
 
 # notifications:
 #   email:
